# newsdigest

./: .pre-commit-config.yaml
.github/workflows/: ci.yml
newsdigest/: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.docs.yml  docker-compose.yml  manage.py  pyproject.toml
newsdigest/config/: celery_app.py  urls.py  wsgi.py
newsdigest/config/settings/: base.py  local.py  production.py  test.py
newsdigest/docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
newsdigest/feeds/: admin.py  apps.py  models.py  tasks.py  tests.py  views.py
newsdigest/feeds/management/commands/: fetch_feeds.py
newsdigest/feeds/migrations/: 0001_initial.py  0002_add_feed_fetch_periodic_task.py
newsdigest/locale/en_US/LC_MESSAGES/: django.po
newsdigest/locale/fr_FR/LC_MESSAGES/: django.po
newsdigest/locale/pt_BR/LC_MESSAGES/: django.po
newsdigest/newsdigest/: conftest.py
newsdigest/newsdigest/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
newsdigest/newsdigest/templates/: base.html
newsdigest/newsdigest/users/: adapters.py  apps.py  models.py  views.py
newsdigest/newsdigest/users/migrations/: 0001_initial.py
newsdigest/newsdigest/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
